[package]
name = "aprun"
version = "0.1.2"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
description = "Async parallel runner"
edition = "2018"
license = "MIT"
repository = "https://github.com/fbucek/aprun"
readme = "README.md"
exclude = [".github/*"]

[dependencies]
# Common 
tracing = "0.1"
tracing-log = { version = "0.1", features = ["env_logger"] }

# Async
futures = "0.3"
tokio = { version = "0.2", features = ["time", "sync"] }
async-trait = "0.1"
