[package]
name = "aprun"
version = "0.4.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
description = "Async parallel runner"
edition = "2018"
license = "MIT"
repository = "https://github.com/fbucek/aprun"
readme = "README.md"
exclude = [".github/*"]

[dependencies]
# Common 
tracing = "0.1"
tracing-log = { version = "0.1", features = ["env_logger"] }

# Async
futures = "0.3"
tokio = { version = "1.17", features = ["rt-multi-thread", "time", "sync"] }
async-trait = "0.1"
