[package]
name = "actix-example"
version = "0.2.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"

[dependencies]
# Error and logging
color-eyre = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"

# Http
actix-web = "3"
actix-rt = "1"
actix-http = "2.1"

tokio = { version = "0.3", features= ["rt", "sync"] }

# Jobs runner handling
aprun = { version = "0.2", path = "../../aprun" }
