[package]
name = "actix-example"
version = "0.2.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"

[dependencies]
# Error and logging
color-eyre = "0.6.0"
tracing = "0.1"
tracing-subscriber = "0.2"

# Http
actix-web = "4.0.0-rc.2"
actix-rt = "2.6.0"
actix-http = "3.0.0-rc.1"

tokio = { version = "1.16.1", features= ["rt-multi-thread",  "sync"] }

# Jobs runner handling
aprun = { version = "0.2", path = "../../aprun" }
