[package]
name = "actix-example"
version = "0.4.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"

[dependencies]
# Error and logging
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Http
actix-web = "4.0"
actix-rt = "2.7"
actix-http = "3.0"

tokio = { version = "1.17", features= ["rt-multi-thread",  "sync"] }

# Jobs runner handling
aprun = { version = "0.4", path = "../../aprun" }
